--- a/index.html
+++ b/index.html
@@ -1,156 +1,152 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>COBA TV - Home</title>
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #111;
-      color: white;
-    }
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to bottom, #e6f0ff, #ffffff);
+      color: #001f3f;
+    }header {
+  background-color: #004080;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+}
 
-    header {
-      background-color: #222;
-      padding: 10px;
-      text-align: center;
-    }
+.banner {
+  width: 100%;
+  height: 250px;
+  background-image: url('https://oaidalleapiprodscus.blob.core.windows.net/private/org-rRCfl2z46Wq9VDZh4wJk5Adk/user-UU4ZocIDzG6FvWiR4uoC3NNs/img-hrNGqkR6Fq8Z1cLS66RMXcL7.png?st=2024-07-24T12%3A12%3A00Z&se=2026-07-24T12%3A12%3A00Z&sp=r&sv=2021-08-06&sr=b&sig=BC4%2FAg%2FdFgTuG2UuQdHvDBoCzRI%2FGlz0CKxVD9Wor%2Bk%3D');
+  background-size: cover;
+  background-position: center;
+  border-bottom: 3px solid #004080;
+}
 
-    .banner {
-      width: 100%;
-      height: 220px;
-      background-image: url('https://oaidalleapiprodscus.blob.core.windows.net/private/org-rRCfl2z46Wq9VDZh4wJk5Adk/user-UU4ZocIDzG6FvWiR4uoC3NNs/img-hrNGqkR6Fq8Z1cLS66RMXcL7.png?st=2024-07-24T12%3A12%3A00Z&se=2026-07-24T12%3A12%3A00Z&sp=r&sv=2021-08-06&sr=b&sig=BC4%2FAg%2FdFgTuG2UuQdHvDBoCzRI%2FGlz0CKxVD9Wor%2Bk%3D');
-      background-size: cover;
-      background-position: center;
-      border-bottom: 2px solid #333;
-    }
+.nav {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  background-color: #e6f0ff;
+  padding: 12px;
+}
 
-    .top-nav {
-      display: flex;
-      justify-content: space-around;
-      background-color: #1a1a1a;
-      padding: 10px 0;
-      border-bottom: 1px solid #333;
-      flex-wrap: wrap;
-    }
+.nav button {
+  background: transparent;
+  border: 2px solid #004080;
+  color: #004080;
+  padding: 10px 14px;
+  margin: 6px;
+  border-radius: 30px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
 
-    .top-nav button {
-      background-color: #333;
-      color: white;
-      padding: 10px 16px;
-      margin: 5px;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      font-size: 14px;
-      transition: background 0.3s;
-    }
+.nav button:hover {
+  background-color: #004080;
+  color: white;
+}
 
-    .top-nav button:hover {
-      background-color: #444;
-    }
+.search-container {
+  text-align: center;
+  margin: 20px 0;
+}
 
-    .search-bar {
-      padding: 10px;
-      text-align: center;
-      background-color: #111;
-    }
+.search-container input {
+  padding: 10px;
+  width: 80%;
+  max-width: 500px;
+  border: 2px solid #004080;
+  border-radius: 30px;
+  background-color: white;
+  color: #004080;
+  font-size: 14px;
+}
 
-    .search-bar input {
-      width: 80%;
-      padding: 8px;
-      border-radius: 8px;
-      border: 1px solid #444;
-      background-color: #222;
-      color: white;
-    }
+main {
+  padding: 30px 20px;
+  text-align: center;
+}
 
-    main {
-      padding: 20px;
-      text-align: center;
-    }
+main h2 {
+  color: #003366;
+  margin-bottom: 10px;
+}
 
-    .bottom-nav {
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-      background-color: #1a1a1a;
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      padding: 8px 0;
-      border-top: 1px solid #333;
-    }
+.bottom-bar {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #004080;
+  padding: 12px 0;
+}
 
-    .bottom-nav button {
-      background-color: #333;
-      color: white;
-      padding: 10px 16px;
-      margin: 5px;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      font-size: 14px;
-    }
+.bottom-bar button {
+  background: white;
+  color: #004080;
+  padding: 10px 16px;
+  border: none;
+  border-radius: 20px;
+  font-size: 14px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background 0.3s ease;
+}
 
-    .bottom-nav .plus-button {
-      font-size: 20px;
-      background-color: #007bff;
-      border-radius: 50%;
-      width: 50px;
-      height: 50px;
-      padding: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
+.bottom-bar .plus {
+  background-color: #00aaff;
+  color: white;
+  font-size: 24px;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+}
 
-    @media (max-width: 500px) {
-      .top-nav, .bottom-nav {
-        flex-wrap: wrap;
-      }
+@media (max-width: 600px) {
+  .nav button, .bottom-bar button {
+    font-size: 12px;
+    padding: 8px 12px;
+    margin: 4px;
+  }
 
-      .top-nav button, .bottom-nav button {
-        flex: 1 1 40%;
-        margin: 4px;
-      }
-    }
+  .bottom-bar .plus {
+    width: 40px;
+    height: 40px;
+    font-size: 20px;
+  }
+}
+
   </style>
 </head>
 <body>
-
   <header>
     <h1>COBA TV</h1>
-  </header>
-
-  <div class="banner"></div>
-
-  <div class="top-nav">
+  </header>  <div class="banner"></div>  <div class="nav">
     <button>Home</button>
     <button>Stories</button>
     <button>Videos</button>
     <button>About</button>
-    <button>Contact</button>
     <button>Settings</button>
-  </div>
-
-  <div class="search-bar">
-    <input type="text" placeholder="Search stories or videos...">
-  </div>
-
-  <main>
+  </div>  <div class="search-container">
+    <input type="text" placeholder="Search...">
+  </div>  <main>
     <h2>Welcome to COBA TV</h2>
-    <p>Watch short animated stories, explore adventures, and enjoy fun moments!</p>
-    <p>Click “Stories” to begin reading.</p>
-  </main>
-
-  <div class="bottom-nav">
+    <p>Explore amazing stories and animated adventures from your screen.</p>
+  </main>  <div class="bottom-bar">
     <button>Profile</button>
-    <button class="plus-button">+</button>
+    <div class="plus">+</div>
     <button>Settings</button>
   </div>
-
 </body>
-      </html>
+  </html>
