--- a/index.html
+++ b/index.html
@@ -4,119 +4,156 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>COBA TV</title>
   <style>
-    body {
+    * {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #e8f1fc;
-      color: #1a1a1a;
-    }/* Top Navbar */
-.top-navbar {
-  display: flex;
-  justify-content: space-around;
-  background-color: #0066cc;
-  padding: 10px 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: Arial, sans-serif;
+    }body {
+  background-color: #e9f1fb;
+  color: #1c1c1c;
 }
 
-.top-navbar button {
-  background-color: white;
-  border: none;
+header {
+  background-color: #2563eb;
+  color: white;
   padding: 10px 20px;
-  border-radius: 20px;
-  font-weight: bold;
-  color: #0066cc;
-  cursor: pointer;
-}
-
-.top-navbar button:hover {
-  background-color: #cce5ff;
-}
-
-/* Hero Banner */
-.hero {
   text-align: center;
+}
+
+header h1 {
+  font-size: 28px;
+  margin-bottom: 5px;
+}
+
+.banner {
+  width: 100%;
+  height: auto;
   position: relative;
 }
 
-.hero img {
+.banner img {
   width: 100%;
-  max-height: 400px;
+  max-height: 250px;
   object-fit: cover;
 }
 
-.hero h1 {
+.banner-text {
   position: absolute;
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: rgba(0, 0, 0, 0.5);
   color: white;
-  padding: 15px 30px;
-  border-radius: 15px;
-  font-size: 2em;
+  font-size: 24px;
+  font-weight: bold;
+  background-color: rgba(0, 0, 0, 0.4);
+  padding: 10px 20px;
+  border-radius: 8px;
 }
 
-/* Main Content */
-.content {
-  padding: 20px;
-  text-align: center;
-}
-
-/* Bottom Navbar */
-.bottom-navbar {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
+nav.top-nav {
   display: flex;
   justify-content: space-around;
-  background-color: #ffffff;
-  border-top: 1px solid #ccc;
-  padding: 10px 0;
+  background-color: #2563eb;
+  padding: 10px;
+  flex-wrap: wrap;
 }
 
-.bottom-navbar button {
-  background-color: #0066cc;
-  color: white;
+nav.top-nav button {
+  background-color: white;
   border: none;
-  padding: 10px 15px;
-  border-radius: 25px;
+  padding: 10px 20px;
+  margin: 5px;
+  border-radius: 20px;
+  color: #2563eb;
   font-weight: bold;
   cursor: pointer;
 }
 
-.bottom-navbar button:hover {
-  background-color: #004c99;
+main {
+  padding: 20px;
+  text-align: center;
+}
+
+main h2 {
+  margin-bottom: 10px;
+  color: #2563eb;
+}
+
+.search-bar {
+  margin-top: 10px;
+  padding: 10px;
+  border: 2px solid #2563eb;
+  border-radius: 20px;
+  width: 80%;
+  max-width: 400px;
+}
+
+.bottom-nav {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #2563eb;
+  display: flex;
+  justify-content: space-around;
+  padding: 10px 0;
+  border-top: 2px solid white;
+}
+
+.bottom-nav button {
+  background-color: white;
+  border: none;
+  padding: 10px 14px;
+  border-radius: 20px;
+  font-weight: bold;
+  color: #2563eb;
+  cursor: pointer;
+}
+
+.plus-button {
+  font-size: 22px;
+  background-color: #ffffff;
+  color: #2563eb;
+  padding: 10px 18px;
+  border-radius: 50%;
+  font-weight: bold;
+  border: 2px solid #2563eb;
 }
 
 @media (max-width: 600px) {
-  .top-navbar {
-    flex-direction: column;
-    align-items: center;
+  nav.top-nav button, .bottom-nav button {
+    padding: 8px 12px;
+    font-size: 14px;
   }
 
-  .top-navbar button {
-    margin: 5px 0;
+  .plus-button {
+    font-size: 20px;
+    padding: 10px 14px;
   }
 }
 
   </style>
 </head>
 <body>
-  <!-- Top Navbar -->
-  <div class="top-navbar">
+  <header>
+    <h1>COBA TV</h1>
+  </header>  <div class="banner">
+    <img src="https://raw.githubusercontent.com/COBA-TV/coba-tv-site/refs/heads/main/grok_image_e2qyab.jpg" alt="COBA TV Banner" />
+    <div class="banner-text">Welcome to COBA TV!</div>
+  </div>  <nav class="top-nav">
     <button>Home</button>
     <button>Stories</button>
     <button>About</button>
-    <button>Search</button>
-  </div>  <!-- Hero Banner -->  <div class="hero">
-    <img src="<!-- INSERT IMAGE LINK HERE -->" alt="COBA TV Banner" />
-    <h1>Welcome to COBA TV</h1>
-  </div>  <!-- Main Content -->  <div class="content">
-    <p>Enjoy fun stories, animated adventures, and more. Tap the menu below to explore!</p>
-  </div>  <!-- Bottom Navbar -->  <div class="bottom-navbar">
+    <button>Contact</button>
+    <input class="search-bar" type="text" placeholder="Search..." />
+  </nav>  <main>
+    <h2>Enjoy Amazing Animated Stories</h2>
+    <p>Tap the plus (+) button below to upload your story.</p>
+  </main>  <nav class="bottom-nav">
     <button>Profile</button>
-    <button style="background-color: #28a745;">+ Upload</button>
+    <button class="plus-button">+</button>
     <button>Settings</button>
-  </div>
+  </nav>
 </body>
-  </html>
+                  </html>
